2006-01-17  Wade Berrier  <wberrier@novell.com>

	* Have vte-sharp only depend on gtk-sharp instead of gnome-sharp
	* sample/VteTest.cs: use gtk# calls instead of gnome#
	* vte/vte-sharp-2.0.pc.in: depend on gtk-sharp instead of gnome-sharp
	* configure.in.in: Allow vte to be build if gnome isn't going to be built
	[Fixes #77182]

2005-01-13  Mike Kestner  <mkestner@novell.com>

	* glib/Marshaller.cs : subtract utc_offset when marshaling to time_t.
	[Fixes #77244]

2005-01-12  Mike Kestner  <mkestner@novell.com>

	* sources/MethodBody.cs : use Utf8.GetByteCount for hidden len params.
	[Fixes #77097]

2005-01-11  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.8 : bump version to 2.8.0

2005-12-30  Alp Toker  <alp@atoker.com>

	* Thread.cs: Add GLib.Thread.Supported, should be checked to avoid doing
	Thread.Init() twice (Mono runtime initialises GLib threads itself, MS
	runtime doesn't)
	* glue/thread.c: g_thread_supported() is a macro, so needs glue
	* glue/Makefile.am:
	* glue/makefile.win32: Update makefiles with new glue file.

2005-12-21  Lluis Sanchez Gual  <lluis@novell.com>

	* generator/FieldBase.cs: Properly convert marshalled value 
	to native value.
	* generator/CallbackGen.cs: Added parens to the result of ToNativeReturn,
	since it may have problems with the cast.

2005-12-16  John Luke  <john.luke@gmail.com>

	* samples/CairoSample.cs:
	* samples/GtkCairo.cs:
	* samples/Makefile.am: update the cairo sample, fixes bug #76324
	
2005-12-16  Mike Kestner  <mkestner@novell.com>

	* gdk/PixbufLoader.custom (InitFromAssemblyResource): move stream
	access code outside the try block so only the Load is cleaned up with 
	the finally block. Add some other arg checking. [Fixes #76997]

2005-12-13  Mike Kestner  <mkestner@novell.com>

	* sources/Makefile.am : move to stable gtk 2.8 versions.
	* sources/gtk-sharp-2.8-sources.xml : move to stable gtk 2.8 versions.
	* */*.raw : regenerate.
	* gdk/Gdk.metadata : hide a few gtk+ internal methods.