@@ -956,5 +956,18 @@
         <remarks>Override this method in a subclass to provide a default handler for the <see cref="M:Gnome.Canvas.RenderBackground" /> event.</remarks>
       </Docs>
     </Member>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public Canvas (bool is_aa);" />
+      <MemberType>Constructor</MemberType>
+      <Parameters>
+        <Parameter Name="is_aa" Type="System.Boolean" />
+      </Parameters>
+      <Docs>
+        <param name="is_aa"><see langword="true"/> if an antialiased canvas should be created.</param>
+        <summary>Constructs a canvas with or without antialiasing.</summary>
+        <remarks />
+        <since version="Gtk# 2.4" />
+      </Docs>
+    </Member>
   </Members>
 </Type>
