@@ -795,7 +795,7 @@
       </ReturnValue>
       <Docs>
         <summary>Kharoshthi</summary>
-	<since version="Gtk# 2.8" />
+        <since version="Gtk# 2.8" />
       </Docs>
     </Member>
     <Member MemberName="NewTaiLue">
@@ -806,7 +806,7 @@
       </ReturnValue>
       <Docs>
         <summary>NewTaiLue</summary>
-	<since version="Gtk# 2.8" />
+        <since version="Gtk# 2.8" />
       </Docs>
     </Member>
     <Member MemberName="Tifinagh">
@@ -817,7 +817,7 @@
       </ReturnValue>
       <Docs>
         <summary>Tifinagh</summary>
-	<since version="Gtk# 2.8" />
+        <since version="Gtk# 2.8" />
       </Docs>
     </Member>
     <Member MemberName="Buginese">
@@ -828,7 +828,7 @@
       </ReturnValue>
       <Docs>
         <summary>Buginese</summary>
-	<since version="Gtk# 2.8" />
+        <since version="Gtk# 2.8" />
       </Docs>
     </Member>
     <Member MemberName="Glagolitic">
@@ -839,7 +839,7 @@
       </ReturnValue>
       <Docs>
         <summary>Glagolitic</summary>
-	<since version="Gtk# 2.8" />
+        <since version="Gtk# 2.8" />
       </Docs>
     </Member>
     <Member MemberName="OldPersian">
@@ -850,7 +850,7 @@
       </ReturnValue>
       <Docs>
         <summary>OldPersian</summary>
-	<since version="Gtk# 2.8" />
+        <since version="Gtk# 2.8" />
       </Docs>
     </Member>
     <Member MemberName="SylotiNagri">
@@ -861,7 +861,7 @@
       </ReturnValue>
       <Docs>
         <summary>SylotiNagri</summary>
-	<since version="Gtk# 2.8" />
+        <since version="Gtk# 2.8" />
       </Docs>
     </Member>
   </Members>
