@@ -1,3 +1,9 @@
+2005-01-17  Mike Kestner  <mkestner@novell.com>
+
+	* gnome/Canvas.custom : add a ctor (bool is_aa) using the
+	construct-only prop.
+	[Fixes #77017]
+
 2006-01-17  Wade Berrier  <wberrier@novell.com>
 
 	* Have vte-sharp only depend on gtk-sharp instead of gnome-sharp
